--- a/pkarr/Cargo.toml
+++ b/pkarr/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["network-programming"]
 
 [dependencies]
 base32 = "0.5.1"
-ed25519-dalek = { version = "2.1.1" }
+ed25519-dalek = { version = "3.0.0-pre.1", features = ["alloc"] }
 thiserror = "2.0.11"
 serde = { version = "1.0.217", features = ["derive"] }
 
@@ -25,7 +25,7 @@ self_cell = { version = "1.1.0", optional = true }
 ntimestamp = { version = "1.0.0", features = ["full"], optional = true }
 
 #feat: client dependencies
-futures-lite = { version = "2.6.0", default-features = false, optional = true , features =["std"]}
+futures-lite = { version = "2.6.0", default-features = false, optional = true, features = ["std"]}
 futures-buffered = { version = "0.2.9", optional = true }
 dyn-clone = { version = "1.0.18", optional = true }
 lru = { version = "0.13.0", default-features = false, optional = true }
@@ -38,7 +38,7 @@ url = { version = "2.5.4", optional = true }
 genawaiter = { version = "0.99.1", default-features = false, features = ["futures03"], optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-getrandom = { version = "0.2.15", default-features = false }
+getrandom = { version = "0.3", default-features = false }
 
 #feat: client dependencies
 tracing = { version = "0.1.41", optional = true }
@@ -61,10 +61,10 @@ rustls = { workspace = true, optional = true }
 webpki = { package = "rustls-webpki", version = "0.102", optional = true }
 
 [target.wasm32-unknown-unknown.dependencies]
-getrandom = { version = "0.2.15", default-features = false, features = ["js"] }
+getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
 
 #feat: client dependencies
-log = { version = "0.4.25", optional = true}
+log = { version = "0.4.25", optional = true }
 wasm-bindgen-futures = { version = "0.4.50", optional = true }
 
 # feat: relay dependencies
@@ -127,7 +127,7 @@ reqwest-builder = ["tls", "reqwest-resolve"]
 
 # Combinations
 ## Use all features
-full-client = [ "relays"]
+full-client = ["dht", "relays"]
 ## Extra features that might benefit most but not all developers building apps using Pkarr.
 ##
 ## Only available if the `client` module is enabled.
