deps: update dht to v6.0.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ name = "pkarr"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
 rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
 
-dht = { git = "https://github.com/Nuhvi/mainline", version = "6.0.1-rc.2" }
+dht = "6.0.0"
